# XHC-OpenMPI

./: .gitignore  LICENSE  README.md
cache_eng/: Makefile  README.md  cache_eng.c  cache_eng.h  perfctr.c  perfctr.h  utils.c
cache_eng/events/: ev_local.input  ev_main.input  ev_remote.input
cache_eng/scenarios/: local.c  mpi_bcast.c  remote.c  state_transitions.c
cache_eng/tools/: mpi_tag.sh  msm_avg.awk  pmon_ev.sh
coherency-protocol/: README.md  analyze-state-transitions.awk  run-protocol.sh  run-state-transitions.sh
coherency-protocol/analysis/: local_scenario.txt  remote_scenario.txt  state_transitions.txt
effect/: README.md  plot-effect-locality.py  plot-effect-slowdown-all.py  plot-effect.py  plot-effect.sh  run-effect.sh
effect/data/CSX-48/: CSX-48_xhc_flat_16K_02x.txt  CSX-48_xhc_flat_16K_03x.txt  CSX-48_xhc_flat_16K_04x.txt  CSX-48_xhc_flat_16K_05x.txt  CSX-48_xhc_flat_16K_06x.txt  CSX-48_xhc_flat_16K_07x.txt  CSX-48_xhc_flat_16K_08x.txt  CSX-48_xhc_flat_16K_09x.txt  CSX-48_xhc_flat_16K_10x.txt  CSX-48_xhc_flat_16K_11x.txt  CSX-48_xhc_flat_16K_12x.txt  CSX-48_xhc_flat_16K_13x.txt  CSX-48_xhc_flat_16K_14x.txt  CSX-48_xhc_flat_16K_15x.txt  CSX-48_xhc_flat_16K_16x.txt  CSX-48_xhc_flat_16K_17x.txt  CSX-48_xhc_flat_16K_18x.txt  CSX-48_xhc_flat_16K_19x.txt  CSX-48_xhc_flat_16K_20x.txt  CSX-48_xhc_flat_16K_21x.txt  CSX-48_xhc_flat_16K_22x.txt  CSX-48_xhc_flat_16K_23x.txt  CSX-48_xhc_flat_16K_24x.txt  CSX-48_xhc_flat_16K_25x.txt  (+23 more)
ompi-patches/: 0001-Fix-workaround-for-mpi_comm_dup_with_info-problem.patch  0002-Refactor-smsc-xpmem-reg-cache-to-use-find-instead-of.patch  0003-smsc-xpmem-Implement-rcache-flags-PERSIST-and-BYPASS.patch
osu-micro-benchmarks/: Makefile.am  README.md  configure.ac  mpi
osu-micro-benchmarks/util/: osu_util.c  osu_util_mpi.c
remedies/: README.md  plot-remedies-speedup-all.py  plot-remedies.py  plot-remedies.sh  run-remedies.sh
smhc/: Makefile.am  README.md  coll_smhc.h  coll_smhc_bcast_flat.c  coll_smhc_bcast_tree.c  coll_smhc_component.c  coll_smhc_module.c  help-coll-smhc.txt
utils/: README.md  cproc-df.sh  graph_utils.py  proc-df-full-lat-all.awk  proc-df-full.awk  proc-df.awk
xb/: Makefile.am  README.md  coll_xb.h  coll_xb_barrier.c  coll_xb_component.c  coll_xb_module.c
xbrc/: Makefile.am  README.md  coll_xbrc.c  coll_xbrc.h  coll_xbrc_allreduce.c  coll_xbrc_component.c  coll_xbrc_module.c  configure.m4
xhc/: Makefile.am  README.md  coll_xhc.c  coll_xhc.h  coll_xhc_allreduce.c  coll_xhc_atomic.h  coll_xhc_barrier.c  coll_xhc_bcast.c  coll_xhc_component.c  coll_xhc_module.c  coll_xhc_reduce.c  help-coll-xhc.txt  make-git.sh
xhc/patches/: remedy_clwb.diff  remedy_dual.diff  remedy_opt.diff  remedy_wait.diff
(+156 files in other folders)
